Add test for via location mapper